wrapped the contact links and subtitle in a span to style it correctly

--- a/src/App.css
+++ b/src/App.css
@@ -329,6 +329,7 @@ CONTACT
 }
 
 .link {
+  margin-left: 0.3em;
   background-clip: text;
   -webkit-text-fill-color: transparent;
   transition: all 300ms ease;
@@ -340,6 +341,10 @@ CONTACT
 
 .fa-whatsapp{
   color: #00850d;
+}
+
+.contact__link{
+  display: flex;
 }
 
 /* 
@@ -434,9 +439,13 @@ MEDIA QUERIES
     flex-direction: column;
   }
 
+  .contact__title{
+    letter-spacing: 0.3em;
+  }
+
   .contact__subtitle{
-    font-size: 1em;
-    letter-spacing: 0.2em;
+    font-size: 1.5em;
+    letter-spacing: normal;
   }
 
   .footer__item {
